# audio_digit_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: explore_data.ipynb  training_Po2_QAT_brevitas.ipynb  training_base.ipynb  training_po2_qat.ipynb  training_post_train_quant.ipynb  training_prune.ipynb  training_ptq.ipynb  training_ptq_sony.ipynb  training_small.ipynb
sdc/: quantization_observers.py  rnn.py  rnn_brevitas.py  rnn_q.py  standard_norm.py  trainer.py
